feat: Introduce web search tool with implementation plan and update related documentation.